fix ansible boolean

--- a/deploy/roles/setup/tasks/docker.yml
+++ b/deploy/roles/setup/tasks/docker.yml
@@ -1,9 +1,9 @@
 - name: Installing dependencies
-  become: yes
+  become: true
   apt:
     name: "{{item}}"
     state: present
-    update_cache: yes
+    update_cache: true
 
   loop:
     - apt-transport-https
@@ -13,50 +13,43 @@
     - lsb-release
     - software-properties-common
 
-
 - name: Adding GPG key
-  become: yes
+  become: true
   apt_key:
     url: https://download.docker.com/linux/ubuntu/gpg
     state: present
 
-
 - name: Adding docker repository
-  become: yes
+  become: true
   apt_repository:
     repo: deb https://download.docker.com/linux/ubuntu bionic stable
     state: present
 
-
 - name: Installing docker
-  become: yes
+  become: true
   apt:
     name: "{{item}}"
     state: latest
-    update_cache: yes
+    update_cache: true
   loop:
     - docker-ce
     - docker-ce-cli
     - containerd.io
     - docker-compose
 
-
 - name: Ensuring the user is added to the docker group
-  become: yes
+  become: true
   ansible.builtin.user:
     name: "{{ user }}"
     groups: docker
     append: true
 
-
 # reset_connection doesn't support conditionals.
 - name: Resetting connection so docker group is picked up
   meta: reset_connection
-
 
 - name: Starting docker service
   service:
     name: docker
     state: started
-    enabled: yes
- 
+    enabled: true
